panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__pointers__test_funtion_pointer_explicit_deref.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/pointers/test_funtion_pointer_explicit_deref.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/pointers/test_funtion_pointer_explicit_deref.c"
   (function-definition external stack-size=24
      (f~0 `fn(x: int) -> int` (static f))
      (params
         (x~2 `int` @0))
      (compound-statement
         (return
            (add `int` @4
               (x~2 `int` @0)
               (2 `int` @8)))))
   (function-definition external stack-size=72
      (main~3 `fn() -> int` (static main))
      (compound-statement
         (definition (x~5 `int` @0) (40 `int` @0))
         (definition (p~6 `ptr<fn(∅: int) -> int>` @8)
            (addressof `ptr<fn(x: int) -> int>` @8
               (f~0 `fn(x: int) -> int` (static f))))
         (return
            (call `int` @16
               (addressof `ptr<fn(∅: int) -> int>` @24
                  (deref `fn(∅: int) -> int` @24
                     (addressof `ptr<fn(∅: int) -> int>` @32
                        (deref `fn(∅: int) -> int` @32
                           (addressof `ptr<fn(∅: int) -> int>` @40
                              (deref `fn(∅: int) -> int` @40
                                 (addressof `ptr<fn(∅: int) -> int>` @48
                                    (deref `fn(∅: int) -> int` @48 (p~6 `ptr<fn(∅: int) -> int>` @8)))))))))
               (x~5 `int` @0))))))

----- stderr -----
