panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__pointers__test_large_ptradd.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/pointers/test_large_ptradd.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/pointers/test_large_ptradd.c"
   (function-definition external stack-size=60568
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (xs~2 `array<array<int; 123>; 123>` @0) ∅)
         (expression
            (assign `int` @60516
               (deref `int` @60516
                  (ptr-add `ptr<int>` @60520
                     (noop-type-conversion `ptr<int>` @60520
                        (addressof `ptr<array<int; 123>>` @60520
                           (deref `array<int; 123>` @60520
                              (ptr-add `ptr<array<int; 123>>` @60528
                                 (noop-type-conversion `ptr<array<int; 123>>` @60528
                                    (addressof `ptr<array<array<int; 123>; 123>>` @60528
                                       (xs~2 `array<array<int; 123>; 123>` @0)))
                                 (sign-extend `long` @60536 (122 `int` @60544))))))
                     (sign-extend `long` @60536 (122 `int` @60544))))
               (42 `int` @60536)))
         (return
            (deref `int` @60516
               (ptr-add `ptr<int>` @60520
                  (noop-type-conversion `ptr<int>` @60520
                     (addressof `ptr<array<int; 123>>` @60520
                        (deref `array<int; 123>` @60520
                           (ptr-add `ptr<array<int; 123>>` @60528
                              (noop-type-conversion `ptr<array<int; 123>>` @60528
                                 (addressof `ptr<array<array<int; 123>; 123>>` @60528
                                    (xs~2 `array<array<int; 123>; 123>` @0)))
                              (sign-extend `long` @60536 (122 `int` @60544))))))
                  (sign-extend `long` @60536 (122 `int` @60544))))))))

----- stderr -----
