panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__pointers__test_pointer_compatibility_for_pointers_to_arrays_of_unknown_length.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/pointers/test_pointer_compatibility_for_pointers_to_arrays_of_unknown_length.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/pointers/test_pointer_compatibility_for_pointers_to_arrays_of_unknown_length.c"
   (function-definition external stack-size=200
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (xs~1 `array<int; 42>` @0) (braced ∅))
         (definition (p~2 `ptr<array<int; ∅>>` @168)
            (addressof `ptr<array<int; 42>>` @168
               (xs~1 `array<int; 42>` @0)))
         (definition (q~3 `ptr<array<int; 42>>` @176)
            (addressof `ptr<array<int; 42>>` @176
               (xs~1 `array<int; 42>` @0)))
         (return
            (ptr-equal `int` @184
               (p~2 `ptr<array<int; ∅>>` @168)
               (q~3 `ptr<array<int; 42>>` @176))))))

----- stderr -----
